# padeiro

./: .gitignore  LICENSE.txt  Makefile  README.md  environment.yml  pyproject.toml  setup.py
padeiro/: __init__.py  cli.py  core.py
recipes/: README.md
tests/: __init__.py  test_recipe.py
